draft-display: Ensure that draft image doesn't overflow the container

--- a/app/styles/components/publishr/draft-display.less
+++ b/app/styles/components/publishr/draft-display.less
@@ -2,6 +2,10 @@
 
 .draft-display {
   display: flex;
+
+  img {
+    max-width: 100% !important;
+  }
 }
 
 .draft-display.draft-display--content-only {
